fixes spacing on Angular logo

--- a/public/resources/css/module/_main-nav.scss
+++ b/public/resources/css/module/_main-nav.scss
@@ -34,6 +34,8 @@
       width: 135px;
       overflow: hidden;
       text-indent: -3000px;
+      margin-top: 0;
+      margin-bottom: 0;
 
       @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
         background: url('/resources/images/logos/standard/logo-nav@2x.png') 0px 8px no-repeat;
